@@ -3,6 +3,7 @@ Changes in openair 1.0-0 [2013-11-21]
 *	Pass all arguments in corPlot
 *	Update timeVariation to consider median + quantiles through
 	option 'statistic'
+*	Do not remove NA results from modStats
 
 Changes in openair 0.9-0 [2013-02-13]
 =====================================
